Fixed card accessibility and added collapse

--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,10 +1,16 @@
 @import '../../../styles/variables';
 
-$card-header-color: darken($page-content-background-color, 10%);
-$card-background-color: darken($page-content-background-color, 5%);
+$card-background-color: #18284688;
+$card-header-color: darken($card-background-color, 5%);
+$card-border-color: darken($card-background-color, 10%);
+
+$card-border-radius: 4px;
 
 $card-header-padding: 0.5rem;
-$card-header-font-size: 1.5rem;
+$card-header-font-size: 1.3rem;
+
+$card-expand-collapse-margin-top: 1rem;
+$card-expand-collapse-margin-left: 1rem;
 
 $card-contents-horizontal-padding: 1rem;
 $card-contents-bottom-padding: 0.5rem;
@@ -12,15 +18,34 @@ $card-contents-bottom-padding: 0.5rem;
 .card {
     background-color: $card-background-color;
     color: white;
+    border: 1px solid $card-border-color;
+    border-radius: $card-border-radius;
+
+    &__header-container {
+        display: flex;
+        background-color: $card-header-color;
+        font-size: $card-header-font-size;
+    }
+
+    &__expand-collapse {
+        margin-top: $card-expand-collapse-margin-top;
+        margin-left: $card-expand-collapse-margin-left;
+    }
 
     &__header {
-        background-color: $card-header-color;
         padding: $card-header-padding;
-        font-size: $card-header-font-size;
+        margin-top: 0;
+        margin-bottom: 0;
         text-align: center;
+        display: inline;
+        flex-grow: 1;
     }
 
     &__contents {
         padding: 0 $card-contents-horizontal-padding $card-contents-bottom-padding;
+
+        &--collapsed {
+            display: none;
+        }
     }
 }
