--- a/src/pages/About/index.scss
+++ b/src/pages/About/index.scss
@@ -9,6 +9,11 @@
         &:hover {
             animation: flip-text-x 2s linear 0s 1;
         }
-        
+    }
+}
+
+.job-info {
+    h3 {
+        font-size: 1rem;
     }
 }
